# routes/auth.js
@@ -1,7 +1,7 @@
 // ==================== Auth Routes ====================
 
 import { Router } from "express";
-import { session, signIn, signOut, signUp } from "../controllers/auth.js";
+import { session, signIn, signOut, signUp, signUpStatus } from "../controllers/auth.js";
 import authMiddleware from "../middlewares/auth.js";
 import rateLimit from "../middlewares/rateLimit.js";
 
@@ -13,6 +13,8 @@ router.post("/sign-up", authLimiter, signUp);
 router.post("/sign-in", authLimiter, signIn);
 router.delete("/sign-out", authMiddleware, signOut);
 router.get("/session", authMiddleware, session);
+router.get("/status", signUpStatus);
+router.get("/sign-up-status", signUpStatus);
 
 export default router;
 
